--- a/포트폴리오1_머신러닝_분류분석.ipynb
+++ b/포트폴리오1_머신러닝_분류분석.ipynb
@@ -294,7 +294,7 @@
         "outputId": "5cdbaf34-2033-4752-dfa5-41a099d26fcd"
       },
       "source": [
-        "# DataFrame에서 제공하는 메소드를 이용하여 각 데이터프레임의 구조 분석하기 (head(), info(), describe())\n",
+        "# DataFrame에서 제공하는 메소드를 이용하여 각 데이터프레임의 구조 분석하기\n",
         "df_pres.head()"
       ],
       "execution_count": null,
